--- a/templates/default.html
+++ b/templates/default.html
@@ -25,6 +25,7 @@
                     <ul class="nav">
                         <li id="menu-Home"><a href="/index.html">Home</a></li>
                         <li id="menu-About"><a href="/about.html">About</a></li>
+                        <li id="menu-Lines"><a href="/lines.html">Lines</a></li>
                         <li id="menu-Posts"><a href="/posts.html">Posts</a></li>
                         <li id="menu-Tags"><a href="/tags.html">Tags</a></li>
                     </ul>
