added row-fluid to default container

--- a/templates/default.html
+++ b/templates/default.html
@@ -39,8 +39,10 @@
             </div>
         </div>
 
-        <div class="container">
-            $body$
+        <div class="container row-fluid">
+            <div class="span12">
+                $body$
+            </div>
         </div>
 
         <script type="text/javascript"
