--- a/templates/default.html
+++ b/templates/default.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" type="text/css" href="/css/syntax.css" />
         <link rel="stylesheet" type="text/css" href="/css/custom.css" />
 
-        <script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>  
+        <script type="text/javascript" src="/js/jquery-1.9.1.min.js"></script>  
         <script>
             $$(document).ready(function(){
                 $$("#menu-$title$").addClass("active");
@@ -40,7 +40,7 @@
         </div>
 
         <div class="container row-fluid">
-            <div class="span12">
+            <div class="span10 offset1">
                 $body$
             </div>
         </div>
