--- a/sources/layouts/resources.html
+++ b/sources/layouts/resources.html
@@ -1,1 +1,11 @@
-resources.html
+path = require 'path'
+
+makeHTML = (store, pathname) ->
+
+	dirname = path.dirname pathname
+	basename = path.dirname 
+	[resourceType] = store.getPathData path
+	layout = pathMeta.layout
+	resourceType = sources.resources.G2__RT3.meta.resourceType
+	view = sources.resources.G2__RT3.meta
+	layout = grunt.read.file "sources/layouts/default.html"
