added layouts Readme, gitignore ignores generated html

--- a/sources/layouts/resource.html
+++ b/sources/layouts/resource.html
@@ -1,9 +1,9 @@
-<%= head %>
+<%= _head %>
 
-<%= nav %>
+<%= _nav %>
 
 <div class="container">
-<%= view %>
+<%= content %>
 </div>
 
-<%= foot %>
+<%= _foot %>
