sdjusted layout urls and grunt watches

--- a/sources/layouts/_nav.html
+++ b/sources/layouts/_nav.html
@@ -11,7 +11,7 @@
       </a>
 
       <!-- Be sure to leave the brand out there if you want it shown -->
-      <a class="brand" href="#"><img src="images/cmep-logo.png" style="height:30px;padding:0px 5px 0px 0px"/>CMEP Tube</a>
+      <a class="brand" href="#"><img src="/images/cmep-logo.png" style="height:30px;padding:0px 5px 0px 0px"/>CMEP Tube</a>
 
       <!-- Everything you want hidden at 940px or less, place within here -->
       <div class="nav-collapse collapse">
@@ -23,9 +23,9 @@
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Resources <b class="caret"></b></a>
             <ul class="dropdown-menu">
-              <li><a href="G2_RT2/index.html">G2_RT2</a></li>
-              <li><a href="G2_RT3/index.html">G2_RT3</a></li>
-              <li><a href="G2_RT7/index.html">G2_RT7</a></li>
+              <li><a href="/resources/G2_RT2/index.html">G2_RT2</a></li>
+              <li><a href="/resources/G2_RT3/index.html">G2_RT3</a></li>
+              <li><a href="/resources/G2_RT7/index.html">G2_RT7</a></li>
               <li class="divider"></li>
               <li class="nav-header">Nav header</li>
               <li><a href="#">Separated link</a></li>
