--- a/sources/layouts/_foot.html
+++ b/sources/layouts/_foot.html
@@ -12,24 +12,24 @@
 </script>
 
 <!-- build:js scripts/main.js -->
-<script src="/bower_components/jquery/jquery.js"></script>
-<script src="/scripts/main.js"></script>
+<script src="<%=root%>/bower_components/jquery/jquery.js"></script>
+<script src="<%=root%>/scripts/main.js"></script>
 <!-- endbuild -->
 
 <!-- build:js scripts/vendor/bootstrap.js -->
-<script src="/bower_components/bootstrap/js/bootstrap-affix.js"></script>
-<script src="/bower_components/bootstrap/js/bootstrap-alert.js"></script>
-<script src="/bower_components/bootstrap/js/bootstrap-dropdown.js"></script>
-<script src="/bower_components/bootstrap/js/bootstrap-tooltip.js"></script>
-<script src="/bower_components/bootstrap/js/bootstrap-modal.js"></script>
-<script src="/bower_components/bootstrap/js/bootstrap-transition.js"></script>
-<script src="/bower_components/bootstrap/js/bootstrap-button.js"></script>
-<script src="/bower_components/bootstrap/js/bootstrap-popover.js"></script>
-<script src="/bower_components/bootstrap/js/bootstrap-typeahead.js"></script>
-<script src="/bower_components/bootstrap/js/bootstrap-carousel.js"></script>
-<script src="/bower_components/bootstrap/js/bootstrap-scrollspy.js"></script>
-<script src="/bower_components/bootstrap/js/bootstrap-collapse.js"></script>
-<script src="/bower_components/bootstrap/js/bootstrap-tab.js"></script>
+<script src="<%=root%>/bower_components/bootstrap/js/bootstrap-affix.js"></script>
+<script src="<%=root%>/bower_components/bootstrap/js/bootstrap-alert.js"></script>
+<script src="<%=root%>/bower_components/bootstrap/js/bootstrap-dropdown.js"></script>
+<script src="<%=root%>/bower_components/bootstrap/js/bootstrap-tooltip.js"></script>
+<script src="<%=root%>/bower_components/bootstrap/js/bootstrap-modal.js"></script>
+<script src="<%=root%>/bower_components/bootstrap/js/bootstrap-transition.js"></script>
+<script src="<%=root%>/bower_components/bootstrap/js/bootstrap-button.js"></script>
+<script src="<%=root%>/bower_components/bootstrap/js/bootstrap-popover.js"></script>
+<script src="<%=root%>/bower_components/bootstrap/js/bootstrap-typeahead.js"></script>
+<script src="<%=root%>/bower_components/bootstrap/js/bootstrap-carousel.js"></script>
+<script src="<%=root%>/bower_components/bootstrap/js/bootstrap-scrollspy.js"></script>
+<script src="<%=root%>/bower_components/bootstrap/js/bootstrap-collapse.js"></script>
+<script src="<%=root%>/bower_components/bootstrap/js/bootstrap-tab.js"></script>
 <!-- endbuild -->
 
 </body>
