--- a/sources/layouts/_linesMenu.html
+++ b/sources/layouts/_linesMenu.html
@@ -1,3 +1,27 @@
 <div class="accordion" id="linesMenu">
-  <%= linesAccordionGroups() %>
+
+  <% var i = 0; %>
+  <% for(var line in sources.lines) { %>
+  <%   var meta=sources.lines[line].meta; %>
+  <div class="accordion-group">
+    <div class="accordion-heading">
+      <a class="accordion-toggle" data-toggle="collapse" data-parent="#linesMenu" href="#line<%=++i%>">
+        <%=meta.id%>: <%=meta.title%>
+      </a>
+    </div>
+    <div id="line<%=i%>" class="accordion-body collapse">
+      <div class="accordion-inner">
+        <ul>
+  <%    grunt.util._.forEach(stationsByLine[line], function(station, id) { %>
+          <li>
+            <a href="/stations/<%=station.meta.id%>.html">
+              <%=station.meta.id%>:<%=station.meta.title%>
+            </a>
+          </li>
+  <%    }) %>     
+        </ul>
+      </div>
+    </div>
+  </div>
+  <% } %>
 </div>
