--- a/sources/layouts/home.html
+++ b/sources/layouts/home.html
@@ -1,16 +1,30 @@
 <%= _head %>
-
 <%= _nav %>
 
 <div class="container-fluid">
   <div class="row-fluid">
-    <div id="sidebar1" class="span4">
+    <div id="sidebar1" class="span5">
+      <h1><%= title %></h1>
       <%= _linesMenu %>
     </div>
-    <div id="content" class="span6">
+    <div id="content" class="span5">
       <%= content %>
     </div>
   </div>
 </div>
 
-<%= _foot() %>
+<script>
+$(document).ready(function() {
+  // Handler for .ready() called.
+
+  $(".accordion-body").each(function(index, element) {
+    $(element).on('shown', function() {
+      console.log('showing'+index);
+      MathJax.Hub.Queue(["Typeset",MathJax.Hub, element]);
+    })
+  });
+});
+</script>
+
+<%= _foot %>
+
