fixed home page missing title bug

--- a/sources/layouts/home.html
+++ b/sources/layouts/home.html
@@ -4,7 +4,7 @@
 <div class="container-fluid">
   <div class="row-fluid">
     <div id="sidebar1" class="span5">
-      <h1><%= title %></h1>
+      <h1><%= meta.title %></h1>
       <%= _linesMenu %>
     </div>
     <div id="content" class="span5">
