--- a/sources/layouts/station.html
+++ b/sources/layouts/station.html
@@ -9,7 +9,61 @@
       <%= _linesMenu %>
     </div>
     <div id="content" class="span5">
+
+      <!-- Dependencies dropdown -->
+      <div class="btn-group">
+        <a class="btn dropdown-toggle <%= (meta.dependencies && meta.dependencies.length > 0) ? '' : 'disabled' %>" data-toggle="dropdown" href="#">
+          <span class="icon-arrow-up"></span>
+          Dependencies
+          <span class="caret"></span>
+        </a>
+        <ul class="dropdown-menu">
+          <!-- dropdown menu links -->
+<% grunt.util._.each(meta.dependencies, function(depId) {%>
+          <li>
+            <a href="<%=root%>/stations/<%=depId%>.html">
+              <%=depId%>
+            </a>
+          </li>
+<% })%>
+        </ul>
+      </div>
+
+      <!-- Dependents Dropdown -->
+      <div class="btn-group">
+        <a class="btn dropdown-toggle <%= (meta.dependents && meta.dependents.length > 0) ? '' : 'disabled' %>" data-toggle="dropdown" href="#">
+          <span class="icon-arrow-down"></span>
+          Dependents
+          <span class="caret"></span>
+        </a>
+        <ul class="dropdown-menu">
+          <!-- dropdown menu links -->
+<% grunt.util._.each(meta.dependents, function(depId) {%>
+          <li>
+            <a href="<%=root%>/stations/<%=depId%>.html">
+              <%=depId%>
+            </a>
+          </li>
+<% })%>
+        </ul>
+      </div>
+
+      <!-- Markdown content contains Key Questions -->
       <%= content %>
+
+      <!-- Resources that list station in stids1 -->
+      <h3>Resources</h3>
+      <ul>
+<% grunt.util._.each(primaryResources(meta.id), function(resId) {%>
+<%  var resType = sources.resources[resId].index.meta.resourceType; %>
+<%  var resTypeTitle = sources.resourceTypes[resType].meta.title; %>
+        <li>
+          <a href="<%=resources%>/<%=resId%>/index.html">
+            <%=resId%>: <%=resTypeTitle%>
+          </a>
+        </li>
+<% }) %>
+      </ul>
     </div>
   </div>
 </div>
