changed navbar to navbar-fixed-top

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -1,4 +1,9 @@
 @import "../bower_components/bootstrap/less/bootstrap.less";
+
+body {
+  padding-top: 60px;
+}
+
 @import "../bower_components/bootstrap/less/responsive.less"; // Don't forget to comment lines 22 to remove the second import call to **mixin.less**
 
 @import "../bower_components/font-awesome/less/font-awesome.less";
