--- a/sources/layouts/home.html
+++ b/sources/layouts/home.html
@@ -1,13 +1,13 @@
 <%= _head %>
 <%= _nav %>
 
-<div class="container-fluid">
-  <div class="row-fluid">
-    <div id="sidebar1" class="span4">
+<div class="container">
+  <div class="row">
+    <div id="sidebar1" class="span4 affix">
       <h1><%= meta.title %></h1>
       <%= _linesMenu %>
     </div>
-    <div id="content" class="span8">
+    <div id="content" class="span8 offset4">
       <%= content %>
     </div>
   </div>
@@ -24,6 +24,7 @@ $(document).ready(function() {
       MathJax.Hub.Queue(["Typeset",MathJax.Hub, element]);
     })
   });
+
 });
 </script>
 
