enabled mocha, installed regex-replace, used it to remove Key Question colons

--- a/sources/layouts/home.html
+++ b/sources/layouts/home.html
@@ -3,11 +3,11 @@
 
 <div class="container">
   <div class="row">
-    <div id="sidebar1" class="span4 affix">
+    <div id="sidebar1" class="span4">
       <h1><%= meta.title %></h1>
       <%= _linesMenu %>
     </div>
-    <div id="content" class="span8 offset4">
+    <div id="content" class="span8">
       <%= content %>
     </div>
   </div>
