--- a/sources/layouts/_nav.html
+++ b/sources/layouts/_nav.html
@@ -39,7 +39,7 @@
             <input type="text" class="search-query span2" placeholder="Search">
           </form>
           -->
-          <li class="dropdown pull-right">
+          <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Introductions <b class="caret"></b></a>
             <ul class="dropdown-menu">
               <li><a href="<%=root%>/guides/students.html">for Students</a></li>
