fixed useminPrepeare/useMIn config so script and css links work in dist

--- a/sources/layouts/_head.html
+++ b/sources/layouts/_head.html
@@ -11,7 +11,7 @@
   <meta name="viewport" content="width=device-width">
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
   <link rel="stylesheet" href="<%=root%>/styles/main.css">
-  <!-- build:js scripts/vendor/modernizr.js -->
+  <!-- build:js <%=root%>/scripts/vendor/modernizr.js -->
   <script src="<%=root%>/bower_components/modernizr/modernizr.js"></script>
   <!-- endbuild -->
   <script type="text/x-mathjax-config">
@@ -27,4 +27,4 @@
 src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
   </script>
 </head>
-<body> 
+<body>
