--- a/sources/layouts/_nav.html
+++ b/sources/layouts/_nav.html
@@ -11,7 +11,7 @@
       </a>
 
       <!-- Be sure to leave the brand out there if you want it shown -->
-      <a class="brand" href="<%=root%>/"><img src="<%=root%>/images/cmep-logo.png" style="height:30px;padding:0px 5px 0px 0px"/>CMEP Tube</a>
+      <a class="brand" href="<%=root%>/index.html"><img src="<%=root%>/images/cmep-logo.png" style="height:30px;padding:0px 5px 0px 0px"/>CMEP Tube</a>
 
       <!-- Everything you want hidden at 940px or less, place within here -->
       <div class="nav-collapse collapse">
