--- a/sources/layouts/_foot.html
+++ b/sources/layouts/_foot.html
@@ -11,12 +11,12 @@
   s.parentNode.insertBefore(g,s)}(document,'script'));
 </script>
 
-<!-- build:js scripts/main.js -->
+<!-- build:js <%=root%>/scripts/main.js -->
 <script src="<%=root%>/bower_components/jquery/jquery.js"></script>
 <script src="<%=root%>/scripts/main.js"></script>
 <!-- endbuild -->
 
-<!-- build:js scripts/vendor/bootstrap.js -->
+<!-- build:js <%=root%>/scripts/vendor/bootstrap.js -->
 <script src="<%=root%>/bower_components/bootstrap/js/bootstrap-affix.js"></script>
 <script src="<%=root%>/bower_components/bootstrap/js/bootstrap-alert.js"></script>
 <script src="<%=root%>/bower_components/bootstrap/js/bootstrap-dropdown.js"></script>
