attempting a better station menu

--- a/app/styles/custom.css
+++ b/app/styles/custom.css
@@ -1,67 +1,3 @@
-body {
-}
-
-code {
-    color: black;
-}
-
-pre code {
-    color: black;
-}
-
-table .odd {
-    background-color: #dde;
-}
-
-h1 {
-    line-height: 45px;
-}
-
-h2 {
-    line-height: 35px;
-}
-
-/* home page list of recent blogs */
-ul .noindent {
-    margin-left:0;
-}
-
-.site-logo {
-    float:left;
-    padding-right:10px;
-}
-
-/*Alignment tweaks for social sharing buttons*/
-/* This gets Google to fall into place */
-.social {
-    font-size: 1px;
-}
- 
-/* This gets Facebook to fall into place */
-.social .fb-like {
-    display: inline-block;
-    font-size: 1px;
-}
- 
-/* Set an optional width for your button wrappers */
-.social span {
-    display: inline-block;
-    width: 110px;
-}
- 
-/* Adjust the widths individually if you like */
-.social .google {
-    width: 65px;
-}
-
-.social .facebook {
-    width: 85px;
-}
-
-.social .twitter {
-    width: 95px;
-}
-
-.figure {
-    float:right;
+#sidebar1 .vbtn {
+  width:100%;
 }
