--- a/sources/layouts/_head.html
+++ b/sources/layouts/_head.html
@@ -11,6 +11,7 @@
   <meta name="viewport" content="width=device-width">
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
   <link rel="stylesheet" href="<%=root%>/styles/main.css">
+  <link rel="stylesheet" href="<%=root%>/styles/custom.css">
   <!-- build:js <%=root%>/scripts/vendor/modernizr.js -->
   <script src="<%=root%>/bower_components/modernizr/modernizr.js"></script>
   <!-- endbuild -->
