--- a/sources/layouts/_head.html
+++ b/sources/layouts/_head.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="<%=root%>/styles/main.css">
   <link rel="stylesheet" href="<%=root%>/styles/custom.css">
   <!-- build:js <%=root%>/scripts/vendor/modernizr.js -->
+  <script src="<%=root%>/bower_components/jquery/jquery.js"></script>
   <script src="<%=root%>/bower_components/modernizr/modernizr.js"></script>
   <!-- endbuild -->
   <script type="text/x-mathjax-config">
