--- a/sources/layouts/_linesMenu.html
+++ b/sources/layouts/_linesMenu.html
@@ -13,10 +13,15 @@
     <div id="line<%=i%>" class="accordion-body collapse">
       <div class="accordion-inner">
         <ul>
-<%    grunt.util._.forEach(stationsByLine[line], function(station, id) { %>
+<%    var sortedStations = grunt.util._.sortBy(stationsByLine[line], function(station) {%>
+<%        var compare = station.meta.id.substr(line.length); %>
+<%        compare = compare.replace("a", ".1").replace("b",".2"); %>
+<%        return ~~compare; %>
+<%    }) %>
+<%    grunt.util._.forEach(sortedStations, function(station, id) { %>
           <li>
             <a href="<%=root%>/stations/<%=station.meta.id%>.html">
-              <%=station.meta.id%>:<%=station.meta.title%>
+              <%=station.meta.id%>: <%=station.meta.title%>
             </a>
           </li>
 <%    }) %>
