--- a/sources/layouts/home.html
+++ b/sources/layouts/home.html
@@ -9,6 +9,23 @@
     </div>
     <div id="content" class="span8">
       <%= content %>
+
+      <!-- <svg width="100%" height="100%"
+       viewBox="0.00 0.00 656.00 1340.00" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+          <g id="graph0" class="graph" transform="scale(1 1) rotate(0) translate(4 1336)">
+          <title>G</title>
+          <polygon fill="white" stroke="white" points="-4,5 -4,-1336 653,-1336 653,5 -4,5"/>
+
+          <g id="node1" class="node"><title>A1</title>
+          <text text-anchor="middle" x="520" y="-947.199" font-family="arial" font-size="16.00">A1</text>
+          </g>
+          <text id="thepopup" x="500" y="-970" font-size="20" fill="black" visibility="hidden">Station A1
+            <set attributeName="visibility" from="hidden" to="visible" begin="node1.mouseover" end="node1.mouseout"/>
+          </text>
+      </svg> -->
+
+
+
     </div>
   </div>
 </div>
