--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -19,3 +19,30 @@ body {
 .hero-unit {
   margin: 50px auto 0 auto;
 }
+
+/* station id lozenges */
+.stid {
+  padding:5px 17px 4px 17px;
+  border-radius:(30px);
+  color: #fff;
+  min-width:20px;
+  text-align: center;
+  opacity: 0.8;
+  cursor:pointer;
+  a {
+    color:white;
+  }
+}
+
+.main.stid {
+  .stid;
+  opacity: 1;
+  cursor:auto;
+  border: 3px solid grey;
+}
+
+.stid:hover {
+  opacity:1.0;
+};
+
+
