--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -22,15 +22,23 @@ body {
 
 /* station id lozenges */
 .stid {
-  padding:5px 17px 4px 17px;
+  padding:5px 0px 4px 0px;
   border-radius:(30px);
   color: #fff;
   min-width:20px;
   text-align: center;
   opacity: 0.8;
   cursor: pointer;
+  .box-shadow( ~"1px 1px 2px rgba(0,0,0,.5)");
+  &:active {
+    .box-shadow(~"inset 1px 1px 2px rgba(0,0,0,.5), 0px 0px 0px rgba(0,0,0,.5)");
+  }
   a {
     color:white;
+  }
+  // Focus state for keyboard and accessibility
+  &:focus {
+    .tab-focus();
   }
 }
 
@@ -38,7 +46,8 @@ body {
   .stid;
   opacity: 1;
   cursor:auto;
-  border: 3px solid grey;
+  .box-shadow(none);
+  border: 3px solid orange;
 }
 
 .stid:hover {
