partitioned off real sources to CMEP-sources

--- a/sources/layouts/home.html
+++ b/sources/layouts/home.html
@@ -5,6 +5,11 @@
   <div class="row">
     <div id="sidebar1" class="span4">
       <h1><%= meta.title %></h1>
+      <div class="alert">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        <h2>Sample content</h2>
+        <span class="icon-info-sign"></span> See the <a href="https://github.com/CMEPorg/CMEP-site">Site readme</a> and the <a href="https://github.com/CMEPorg/CMEP-sources">Sources readme</a>.
+      </div>
       <%= _linesMenu %>
     </div>
     <div id="content" class="span8">
