resource layout minor tweak

--- a/sources/layouts/resource.html
+++ b/sources/layouts/resource.html
@@ -3,7 +3,7 @@
 <%= _nav %>
 
 
-<div class="container">
+<div class="container span4">
 <h1>
 <% if(mainStationMeta) { %>
   <a class="mainStationMeta.line" href="../../stations/<%= mainStationMeta.id %>.html"><%= mainStationMeta.id %></a>
