--- a/sources/layouts/station.html
+++ b/sources/layouts/station.html
@@ -1,6 +1,10 @@
 <%= _head %>
 <%= _nav %>
 <% _ = grunt.util._ %>
+<% grunt.log.write("  station layout "+meta.id+"... ") %>
+<% if(meta.id==="G2") {%>
+<%   debugger %>
+<% } %>
 <div class="container-fluid">
   <div class="row-fluid">
     <div id="sidebar1" class="span4">
@@ -106,20 +110,20 @@
 <% if (meta.R1s || meta.R2s) {%>
       <h3>Resources</h3>
       <ul class="unstyled">
-<% _.each(meta.R1s, function(resType, resId) {%>
-<% var resourceTypeMeta = sources.resourceTypes[resType].meta; %>
+<% _.each(meta.R1s, function(res) {%>
+<% var resourceTypeMeta = sources.resourceTypes[res.rt].meta; %>
         <li>
           <span class="<%=resourceTypeMeta.icon%>"></span>
-          <a href="<%=resources%>/<%=resId%>/index.html">
+          <a href="<%=resources%>/<%=res.id%>/index.html">
             <%=resourceTypeMeta.title%>
           </a>
         </li>
 <% }) %>
-<% _.each(meta.R2s, function(resType, resId) {%>
-<% var resourceTypeMeta = sources.resourceTypes[resType].meta; %>
+<% _.each(meta.R2s, function(res) {%>
+<% var resourceTypeMeta = sources.resourceTypes[res.rt].meta; %>
         <li>
           <span class="<%=resourceTypeMeta.icon%>"></span>
-          <a href="<%=resources%>/<%=resId%>/index.html">
+          <a href="<%=resources%>/<%=res.id%>/index.html">
             <%=resourceTypeMeta.title%>
           </a>
         </li>
@@ -181,5 +185,5 @@ $(document).ready(function() {
 
 });
 </script>
-
+<% grunt.log.ok("done"); %>
 <%= _foot %>
