--- a/sources/layouts/home.html
+++ b/sources/layouts/home.html
@@ -6,11 +6,16 @@
   <div class="row">
     <div id="sidebar1" class="span4">
       <h1><%= meta.title %></h1>
+<% var samp = grunt.config.get("yeoman.samples") %>
+<% var sour = grunt.config.get("yeoman.sources") %>
+<% if(sour === samp) { %>
+      <!-- add samples alert -->
       <div class="alert">
         <button type="button" class="close" data-dismiss="alert">&times;</button>
         <h2>Sample content</h2>
         <span class="icon-info-sign"></span> See the <a href="https://github.com/CMEPorg/CMEP-site">Site readme</a> and the <a href="https://github.com/CMEPorg/CMEP-sources">Sources readme</a>.
       </div>
+<% } %>
       <%= _linesMenu %>
     </div>
     <div id="content" class="span8">
