adding heart highlights; deleting old sources/layouts

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -76,7 +76,18 @@ body {
 
 .stid:hover {
   opacity:1.0;
-};
+}
+
+.icon-heart {
+  opacity: 0;
+}
+.icon-heart.highlight {
+  opacity: 1;
+  color:red;
+}
+a.highlight {
+  font-weight: bold;
+}
 
 .nrich-embed {
   border:none;
