--- a/layouts/_linesMenu.html
+++ b/layouts/_linesMenu.html
@@ -1,5 +1,5 @@
 <div class="accordion" id="linesMenu">
-
+<% _ = grunt.util._ %>
 <% var i = 0; %>
 <% for(var line in sources.lines) { %>
 <%   var m=sources.lines[line].meta; %>
@@ -13,15 +13,11 @@
     <div id="line<%=i%>" class="accordion-body collapse">
       <div class="accordion-inner">
         <ul>
-<%    var sortedStations = grunt.util._.sortBy(stationsByLine[line], function(station) {%>
-<%        var compare = station.meta.id.substr(line.length); %>
-<%        compare = compare.replace("a", ".1").replace("b",".2"); %>
-<%        return ~~compare; %>
-<%    }) %>
-<%    grunt.util._.forEach(sortedStations, function(station, id) { %>
+
+<%    _.each(m.stids, function(id) { %>
           <li>
-            <a href="<%=root%>/stations/<%=station.meta.id%>.html">
-              <%=station.meta.id%>: <%=station.meta.title%>
+            <a href="<%=root%>/stations/<%=id%>.html">
+              <%=id%>: <%=sources.stations[id].meta.title%>
             </a>
           </li>
 <%    }) %>
