--- a/layouts/_linesMenu.html
+++ b/layouts/_linesMenu.html
@@ -1,16 +1,15 @@
 <div class="accordion" id="linesMenu">
 <% _ = grunt.util._ %>
-<% var i = 0; %>
 <% for(var line in sources.lines) { %>
 <%   var m=sources.lines[line].meta; %>
 
   <div class="accordion-group">
     <div class="accordion-heading">
-      <a class="accordion-toggle" data-toggle="collapse" data-parent="#linesMenu" href="#line<%=++i%>">
+      <a class="accordion-toggle" data-toggle="collapse" data-parent="#linesMenu" href="#<%=m.id%>">
         <%=m.id%>: <%=m.title%>
       </a>
     </div>
-    <div id="line<%=i%>" class="accordion-body collapse">
+    <div id="<%=m.id%>" class="accordion-body collapse">
       <div class="accordion-inner">
         <ul>
 
